WRITE-388: making the components use data from the redux store and tweaking the styles a bit to fix spacing.

--- a/app/src/components/Rubric/RubricCategoryHeading/rubricCategoryHeading.css
+++ b/app/src/components/Rubric/RubricCategoryHeading/rubricCategoryHeading.css
@@ -1,5 +1,6 @@
 .heading {
   display: flex;
+  height: 71px;
 }
 
 .heading_item {
@@ -10,6 +11,5 @@
   border: 0px solid #999;
   border-width: 0 1px 1px 0;
   width: calc(100% * 1/5);
-  height: 100px;
   padding: 15px;
 }
